<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="8dp"
    tools:context=".submit.SubmitActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/project_submission"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/view_background"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <EditText
            android:id="@+id/first_name"
            android:inputType="textPersonName|textCapWords"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:hint="@string/first_name"
            android:padding="12dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/last_name"
            android:inputType="textPersonName|textCapWords"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:hint="@string/last_name"
            android:padding="12dp"
            android:autofillHints="" />
    </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:hint="@string/email_address"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/github"
        android:inputType="textWebEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:hint="@string/project_on_github_link"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="" />


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/yellow"
        android:text="@string/submit"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/github"
        app:layout_constraintStart_toStartOf="@+id/github"
        app:layout_constraintTop_toBottomOf="@+id/github"
        android:onClick="submitProject"/>
</androidx.constraintlayout.widget.ConstraintLayout>